Fix nav height on small screen, center logo

--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -56,10 +56,16 @@ form.usa-form {
   }
 }
 
+.usa-navbar {
+  min-height: 8rem !important;
+}
+
 .usa-logo {
+  margin-top:1rem;
   em.usa-logo-text {
     font-size: 4rem;
     font-weight: normal;
+    line-height: 1;
     b {font-weight: 700;}
   }
   span {
